<?xml version="1.0" encoding="utf-8"?>
<resources  xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">无线互联</string>
    <string name="media_wait">Connection,Please wait.</string>
    <string name="empty"></string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="label_me">Tv</string>
    <string name="wfd_wait">Waiting for connection...</string>
    <string name="wfd_connecting">Connecting ...</string>
    <string name="wfd_connected">Connected with   </string>
    <string name="wfd_port_error">Cannot get RTSP port</string>
    <string name="wfd_ip_error">Cannot get target IP</string>
    <string name="wfd_ip_get">Getting IP address...</string>
    <string name="miracast_list">MiracastList</string>
    <string name="miracast_setting">Setting</string>
    
    <!-- Message in WPS dialog for PIN after start up [CHAR LIMIT=150] -->
    <string name="wifi_wps_onstart_pin">Enter pin <xliff:g id="number">%1$s</xliff:g> on your Wi-Fi router. The setup can take up to two minutes to complete.</string>   
    <string name="wifi_wps_complete">WPS succeeded. Connecting to the network\u2026</string>
    <string name="wifi_wps_failed_overlap">Another WPS session was detected. Please try again in a few minutes.</string>
    <string name="wifi_wps_failed_wep">The wireless router security setting (WEP) is not supported</string>
    <string name="wifi_wps_failed_tkip">The wireless router security setting (TKIP) is not supported</string>
    <string name="wifi_wps_in_progress">WPS is already in progress and can take up to two minutes to complete</string>
    <string name="wifi_wps_failed_generic">WPS failed. Please try again in a few minutes.</string>	
    <string name="wifi_wps_failed">WPS failed. Please turn on wifi.</string>
	<string name="wifi_wps_onstart_pbc">Press the Wi-Fi Protected Setup button on your router. It may be called \"WPS\" or contain this symbol:</string>
    <string name="wifi_wps_connected">Connected to Wi-Fi network <xliff:g id="network_name">%s</xliff:g></string>
    <string name="wifi_addr">IP address: <xliff:g id="number">%s</xliff:g></string>
    
    <string name="menu_settings">MiracastTest</string> 
  	<string name="action_settings">Settings</string> 
  	<string name="listen_channel_title">Listen channel</string> 
	<string name="listen_channel_dialog_title">Select listen channel</string> 
	<string name="operating_channel_title">Operating channel</string> 
	<string name="operating_channel_dialog_title">Select operating channel</string> 
	<string name="go_intent_title">GO intent</string> 
	<string name="go_intent_dialog_title">Select GO intent value</string> 
	<string name="auto_go_mode_title">Auto Go Mode</string> 
	<string name="self_cmd">Input shell command</string> 
	
	<string name="ssid_title">SSID</string> 
	<string name="psk_title">PSK</string> 
	<string name="TV">TV</string>
	<string name="DeviceID">Device Name :</string>
	<string name="MacAddress">Mac address :</string>
	<string name="Ready">Ready for connection. To get started, launch Screen Mirroring on your device.</string>
	
    <string name="PIN">PIN:</string>    
	<string name="wifi_wps_pin"><xliff:g id="number">%1$s</xliff:g></string>
	<string name="wifi_wps_success"> Security configuration successful</string>
	<string name="wifi_wps_disconnect"> The connection has been terminated.</string>
	<string name="wifi_wps_after_success"> Connected to Screen Mirroring. Please wait.</string>
	<string name="device_terminate">The connection has been terminated.</string>
	<string name="Ready_dialog">Wi-Fi is not available while Screen Mirroring is during operation. Do you want to continue? </string>
	<string name="connect_try">Setup timed out Please try again.</string>
	<string name="connect_exit">Are you sure you want to exit?</string>
	
	<string name="menu">Menu</string>
	<string name="mdisplay">Information</string>
	<string name="Connected_Device">Connected Device</string>
	<string name="Resolution">Resolution</string>
	<string name="Video_codec">Video codec</string>
	<string name="Audio_codec">Audio codec</string>
	
	<string name="tcl_miracast_tips1">waiting for connection ...</string>
	<string name="tcl_miracast_tips2">connection successful</string>
	                 
</resources>
